<resources>
    <string name="error_server_not_reachable">error server not reachable</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="un_authorized">Un authorized</string>
    <string name="create_coupon">Create coupon</string>
    <string name="enter_coupon_name">Enter coupon name</string>
    <string name="discription">Discription</string>
    <string name="how_many_time_use">How many time can use (0 for unlimited)</string>
    <string name="coupon_will_be_public_or_private">Coupon will be Public or Private</string>
    <string name="privates">Private</string>
    <string name="publics">Public</string>
    <string name="coupon_discount_type">Coupon discount type</string>
    <string name="discount_percentage">Discount percentage</string>
    <string name="percentage">Percent</string>
    <string name="quantity">Quantity</string>
    <string name="value">Value</string>
    <string name="credit">Credit</string>
    <string name="product">Product</string>
    <string name="add_product">Add product</string>
    <string name="variant">Variant</string>
    <string name="add_variant">Add variant</string>
    <string name="please_enter_coupon_name">Please enter coupon code</string>
    <string name="please_enter_discription">Please enter discription</string>
    <string name="please_enter_canuse_value">Please enter can use value</string>
    <string name="please_enter_value">Please enter value.</string>
    <string name="please_select_type">Please select type</string>
    <string name="name">Name</string>
    <string name="discount_list">Discount List :</string>
    <string name="nameD">Name :</string>
    <string name="id">ID</string>
    <string name="clinic">Clinic</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="price">Price</string>
    <string name="pending">Pending</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="no_result">No Result</string>
    <string name="enter_doctor_name">Enter doctor name</string>
    <string name="address">Address :</string>
    <string name="submit">Submit</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_total_price">Enter total price</string>
    <string name="enter_pending_price">Enter pending price</string>
    <string name="enter_product_id">Enter product id</string>
    <string name="enter_variant_id">Enter variant id</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="add_products_item">Add products item</string>
    <string name="your_message_has_failed_retry">Your message has failed. Retry</string>
    <string name="enter_something">Enter something</string>
    <string name="order_list">Order list :</string>
    <string name="select_dates">Select dates</string>
    <string name="select_picture">Select picture</string>
    <string name="banner_picture">Banner picture</string>
    <string name="title">title</string>
    <string name="enter_url">Enter url</string>
    <string name="inStock">InStock</string>
    <string name="active">Active</string>
    <string name="done">Done</string>
    <string name="video">Video</string>
    <string name="pdf">Pdf</string>
    <string name="enter_image_url">Enter image url</string>
    <string name="enter_pdf_url">Enter Pdf url</string>
    <string name="hello_user">Hello User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="prescription_record">Prescription Record</string>
    <string name="onboarding_text1">Here you can keep a record of all your patient prescriptions with date and patient details for any future references.</string>
    <string name="onboarding_text2">Here is a quick access for you, to help you place your regular orders conveniently.</string>
    <string name="onboarding_text3">This is a one tap solution for you to attend all Ananta Sambhasha Sessions.</string>
    <string name="onboarding_text4">Now, you can access the benefitting sessions available to you in this tutorial hub.</string>
    <string name="onboarding_text5">Our Monthly Newsletter where we share the Industry news, product launches, offers and rewards. A fun space to look out for, every month!</string>
    <string name="medical_cannabis_tutorials">Medical Cannabis Tutorials</string>
    <string name="live_cme_sessions">Live CME Sessions</string>
    <string name="email_or_mobile_number">Email or mobile number</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="address_mobile_number">Mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Confirm your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="skip_login">Skip Login</string>
    <string name="new_user_sign_up">New user? <b>Sign up</b></string>
    <string name="enter_mobile_number">Enter your mobile number to create your account.</string>
    <string name="update_mobile_number">Enter your mobile number to update.</string>
    <string name="update_email">Enter your Email to update.</string>
    <string name="update_password_message">Enter your mobile number to verify your account.</string>
    <string name="enter_otp">OTP is sent to your mobile number.</string>
    <string name="continue_text">Continue</string>
    <string name="submit_text">Submit</string>
    <string name="done_text">Done</string>
    <string name="resend_otp_timer">Resend OTP in %1$d</string>
    <string name="resend_otp"><b>Resend OTP</b></string>
    <string name="update_password">Change your Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_sign_in">Create Account / Login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_clinic_name">Enter your clinic name</string>
    <string name="address_title">Address</string>
    <string name="address_line_1">Flat, House no., Building</string>
    <string name="address_line_2">Area, Street, Sector</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="doctor_registration_certificate">DOCTOR REGISTRATION CERTIFICATE</string>
    <string name="leaf_of_life_n_monthly_newsletter">Leaf of Life \n(Monthly Newsletter)</string>
    <string name="upload_certificate">Click here to upload certificate</string>
    <string name="upload_prescription_text">Click here to upload prescription</string>
    <string name="permissions_required">Necessary permissions required</string>
    <string name="select_doctor_certificate">Select doctor registration certificate</string>
    <string name="doctor_certificate">Doctor registration certificate</string>
    <string name="uploaded_file_exceeded_size_limit">The uploaded file is above the 10 MB size limit.</string>
    <string name="please_select_valid_file">Please select a valid file.</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="dosage_calculator">Dosage Calculator</string>
    <string name="profile">Profile</string>
    <string name="live_sessions">Live Sessions</string>
    <string name="tutorials">Tutorials</string>
    <string name="orders">Orders</string>
    <string name="newsletter">Newsletter</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="categories">CATEGORIES</string>
    <string name="best_seller">BESTSELLER</string>
    <string name="product_price_from">from Rs. %1$d/-</string>
    <string name="product_category_in">in %1$s</string>
    <string name="trending_products">BEST RATED PRODUCTS</string>
    <string name="all_products">ALL PRODUCTS</string>
    <string name="all_products_small">All Products</string>
    <string name="search_products">Search Products...</string>
    <string name="no_products_found">NO PRODUCTS FOUND</string>
    <string name="cart">Cart</string>
    <string name="price_normal">MRP: Rs. %1$s</string>
    <string name="price_user">MRP: Rs. %1$s  %2$s <font color='#8B0000'>Rs. %3$s</font></string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="download_pdf">DOWNLOAD PDF</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="tax_included">Tax Included</string>
    <string name="download_test_reports">DOWNLOAD TEST REPORTS</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="prescription">Prescription</string>
    <string name="full_name">Full Name</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="due_amount">Due Amount</string>
    <string name="approved">Approved</string>
    <string name="your_id_verification_is_in_progress">Note: Your ID verification is in progress</string>
    <string name="edit">Edit</string>
    <string name="edit_address">Edit Address</string>
    <string name="pay_remaining_amount">Pay remaining amount</string>
    <string name="update">Update</string>
    <string name="no_prescriptions_found">No Prescriptions Found :-(</string>
    <string name="no_orders_found">kindly add items in Cart :-(</string>
    <string name="upload_prescription">Upload Prescription</string>
    <string name="max_30_words">Max 30 words...</string>
    <string name="write_here">Write here...</string>
    <string name="add_description">Add Description (Max 30 words... )</string>
    <string name="note_only_image_and_pdf_can_be_uploaded">Note: Only Image and PDF can be uploaded.</string>
    <string name="your_orders">Your Orders</string>
    <string name="leaf_of_life_monthly_newsletter">Leaf of Life (Monthly Newsletter)</string>
    <string name="select_any_value">Select any type</string>
    <string name="select_product">Select Product</string>
    <string name="select_product_type">Select Product Type</string>
    <string name="select_indication">Select Indication</string>
    <string name="select_your_weight">Select Your Weight</string>
    <string name="delete_your_account">To delete your account, <font color="#8B0000">Click Here</font></string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account?</string>
    <string name="confirm_logout_account">Are you sure you want to log out?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="no_data_found">No data found :-(</string>
    <string name="search_here">Search here...</string>
    <string name="instagram_feed">INSTAGRAM FEED</string>
    <string name="live_session_header">LIVE SESSION</string>
    <string name="result">Result</string>
    <string name="indication">INDICATION</string>
    <string name="disclaimer">DISCLAIMER</string>
    <string name="ok">OK</string>
    <string name="coupon">Coupon</string>
    <string name="price_to_pay">Price to pay</string>
    <string name="no_coupon_applied">NO COUPON APPLIED</string>
</resources>