<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/idEdtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_orange_corner_radius"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="12dp"
        android:textSize="16dp" />


    <EditText
        android:id="@+id/idEdtImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEdtTitle"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_orange_corner_radius"
        android:hint="@string/enter_image_url"
        android:padding="12dp"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/idEdtPdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idEdtImage"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_orange_corner_radius"
        android:hint="@string/enter_pdf_url"
        android:padding="12dp"
        android:textSize="16dp" />


    <TextView
        android:id="@+id/idBtnNewsLetter"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_fill_orange"
        android:gravity="center"
        android:text="Create NewsLetter"
        android:textColor="@color/white" />

</RelativeLayout>