<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@drawable/bg_fill_orange"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/idLlPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:layout_weight="0.2"
                android:textSize="18dp" />
            <TextView
                android:id="@+id/idTvPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.8"
                android:layout_below="@+id/idIgProfile"
                android:text="@string/name"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/idLlMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idLlPrice"
            android:layout_marginTop="8dp"
            android:weightSum="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:layout_weight="0.2"
                android:textSize="18dp" />
            <TextView
                android:id="@+id/idTvPrice"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@+id/idIgProfile"
                android:text="@string/name"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>





</RelativeLayout>